<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context="com.cornez.actionbarexperiment.EntreeFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:contentDescription="@string/ui_tabname_entree"
            android:orientation="horizontal"
            app:srcCompat="@drawable/dinner"
            android:id="@+id/imageView4" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="81dp"
            android:id="@+id/radio_entree">

            <RadioButton
                android:text="@string/entree_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton7"
                android:layout_weight="1"
                android:textSize="24sp" />

            <RadioButton
                android:text="@string/entree_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton8"
                android:layout_weight="1"
                android:textSize="24sp" />

            <RadioButton
                android:text="@string/entree_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton9"
                android:layout_weight="1"
                android:textSize="24sp" />
        </RadioGroup>
    </RelativeLayout>

</LinearLayout>
