<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context="com.cornez.actionbarexperiment.DessertFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:contentDescription="@string/ui_tabname_dessert"
            android:orientation="horizontal"
            app:srcCompat="@drawable/snack"
            android:id="@+id/imageView3" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="81dp"
            android:id="@+id/radio_dessert" >

            <RadioButton
                android:text="@string/dessert_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton4"
                android:layout_weight="1"
                android:textSize="24sp" />

            <RadioButton
                android:text="@string/dessert_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton5"
                android:layout_weight="1"
                android:textSize="24sp" />

            <RadioButton
                android:text="@string/dessert_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton6"
                android:layout_weight="1"
                android:textSize="24sp" />
        </RadioGroup>
    </RelativeLayout>

</FrameLayout>
