<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.cornez.actionbarexperiment.CheckoutFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/ui_tabname_appetizer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="76dp"
            android:id="@+id/textView"
            android:textSize="14sp" />

        <TextView
            android:text="@string/blank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView"
            android:layout_toEndOf="@+id/textView"
            android:layout_marginStart="19dp"
            android:id="@+id/textView2" />

        <TextView
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView2"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="22dp"
            android:id="@+id/textView3" />

        <TextView
            android:text="@string/ui_tabname_entree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_marginTop="29dp"
            android:id="@+id/textView4" />

        <TextView
            android:text="@string/blank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView4"
            android:layout_toEndOf="@+id/textView2"
            android:id="@+id/textView5" />

        <TextView
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView5"
            android:layout_alignEnd="@+id/textView3"
            android:id="@+id/textView7" />

        <TextView
            android:text="@string/ui_tabname_dessert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_alignStart="@+id/textView4"
            android:layout_marginTop="27dp"
            android:id="@+id/textView8" />

        <TextView
            android:text="@string/blank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView8"
            android:layout_alignStart="@+id/textView5"
            android:id="@+id/textView9" />

        <TextView
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView9"
            android:layout_alignEnd="@+id/textView7"
            android:id="@+id/textView10" />

        <TextView
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView11"
            android:layout_alignEnd="@+id/textView10"
            android:id="@+id/textView12" />

        <TextView
            android:text="@string/total_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="49dp"
            android:id="@+id/textView11"
            android:layout_marginBottom="46dp"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/textView12" />
    </RelativeLayout>
</FrameLayout>
