<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context="com.cornez.actionbarexperiment.AppetizerFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:contentDescription="@string/ui_tabname_appetizer"
            app:srcCompat="@drawable/breakfast"
            android:id="@+id/imageView" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="81dp"
            android:id="@+id/radio_appetizer">

            <RadioButton
                android:text="@string/appetizer_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton1"
                tools:text="@string/appetizer_1"
                android:gravity="start"
                android:textSize="24sp"
                android:layout_above="@+id/radioButton2"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true" />

            <RadioButton
                android:text="@string/appetizer_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton2"
                android:textSize="24sp"
                android:layout_above="@+id/radioButton3"
                android:layout_centerVertical="true"
                android:layout_alignStart="@+id/radioButton1" />

            <RadioButton
                android:text="@string/appetizer_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton3"
                android:textSize="24sp"
                android:layout_centerVertical="true"
                android:layout_alignStart="@+id/radioButton2" />

        </RadioGroup>

    </RelativeLayout>
</LinearLayout>
